<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Score Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="generate">Generate Score Sheet</string>
    <string name="number_of_players">Number of Players</string>
    <string name="score_sheet">Score Sheet</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="twenty_five">25</string>
    <string name="one_hundred">100</string>
    <string name="new_scoresheet">New Scoresheet</string>
    <string name="load_scoresheet">Load Saved Scoresheet</string>
    <string name="dice_roller">Dice Roller</string>
    <string name="turn_timer">Turn Timer</string>
    <string name="title_activity_load_score_sheet">LoadScoreSheet</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_score_button_input">ScoreButtonInput</string>
    <string name="title_activity_file_chooser">FileChooser</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_my_dialog">MyDialog</string>
    
    
    <string-array name="numbers_1_8">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

</resources>
